# Playground

.github/workflows/: python.yml
go/src/: main.go
go/src/algorithms/: two_opt.go  utils.go
python/: .gitignore  pyproject.toml
python/src/: gradient.py  rosen.py  strange_genetic.py  test.py
python/src/algorithms/: bellman_ford.py  breadth_first_search.py  depth_first_search.py  dijkstra.py  prim.py
python/src/boxer/: draw_boxes.py  generator.py  models.py  packing.py  test.py
python/src/geocoder/: here.py  yandex.py
python/src/geocoder/data/: here_address.json  here_code.json  here_point.json  yandex_address.json  yandex_point.json
python/src/linopt/: draw.py  pleshcheev_quad.ipynb  pleshcheev_rosen.ipynb  rosen.py  solvers.py  test.py  test_gradients.py  test_quad_constr.py  test_rates.py  test_rosen.py  utils.py
python/src/matrix_api/: osrm.py
python/src/structures/: graph.py  heap.py
src/: test.py
src/algorithms/: bellman_ford.py  breadth_first_search.py  depth_first_search.py  dijkstra.py  prim.py
src/structures/: graph.py  heap.py  matrix.py
