[tool.poetry]
name = "PlayGround"
version = "0.1.0"
description = ""
authors = ["Dmitriy Pleshcheev <dimychspb7@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
